Added loader html, added loader.scss, began stlying up to custom border colour

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -180,6 +180,7 @@
 @import "helpers/placeholders.scss";
 
 @import "components/structure.scss";
+@import "components/loader.scss";
 @import "components/navbar.scss";
 @import "components/charts.scss";
 @import "components/text.scss";
