--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -50,6 +50,15 @@
             animation: spin 1.5s linear infinite;
         }
     }
+    p {
+        color: white;
+        z-index: 2000;
+        display: block;
+        position: relative;
+        // left: 50%;
+        top: 50%;
+        text-align: center;
+    }
 }
 
 @-webkit-keyframes spin {
@@ -83,7 +92,7 @@
     width: 51%;
     height: 100%;
     background: #222222;
-    z-index: 1000;
+    z-index: -1;
 }
  
 #loader-wrapper .loader-section.section-left {
