--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -104,6 +104,13 @@ section {
       border-radius: 50%;
       -webkit-animation: spin 1.5s linear infinite;
       animation: spin 1.5s linear infinite; }
+  #loader-wrapper p {
+    color: white;
+    z-index: 2000;
+    display: block;
+    position: relative;
+    top: 50%;
+    text-align: center; }
 
 @-webkit-keyframes spin {
   0% {
@@ -141,7 +148,7 @@ section {
   width: 51%;
   height: 100%;
   background: #222222;
-  z-index: 1000; }
+  z-index: -1; }
 
 #loader-wrapper .loader-section.section-left {
   left: 0; }
