--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -58,6 +58,7 @@
         // left: 50%;
         top: 50%;
         text-align: center;
+        font-size: 2rem;
     }
 }
 
@@ -91,7 +92,7 @@
     top: 0;
     width: 51%;
     height: 100%;
-    background: #222222;
+    background: #9bcd64;
     z-index: -1;
 }
  
@@ -133,8 +134,8 @@
 .loaded #loader-wrapper .loader-section.section-right,
 .loaded #loader-wrapper .loader-section.section-left {
  
-    -webkit-transition: all 0.3s 0.3s ease-out; 
-            transition: all 0.3s 0.3s ease-out;
+    -webkit-transition: all 0.1s 0.1s ease-out; 
+            transition: all 0.1s 0.1s ease-out;
 }
 
 .loaded #loader-wrapper {
