--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -110,7 +110,8 @@ section {
     display: block;
     position: relative;
     top: 50%;
-    text-align: center; }
+    text-align: center;
+    font-size: 2rem; }
 
 @-webkit-keyframes spin {
   0% {
@@ -147,7 +148,7 @@ section {
   top: 0;
   width: 51%;
   height: 100%;
-  background: #222222;
+  background: #9bcd64;
   z-index: -1; }
 
 #loader-wrapper .loader-section.section-left {
@@ -186,8 +187,8 @@ section {
 
 .loaded #loader-wrapper .loader-section.section-right,
 .loaded #loader-wrapper .loader-section.section-left {
-  -webkit-transition: all 0.3s 0.3s ease-out;
-  transition: all 0.3s 0.3s ease-out; }
+  -webkit-transition: all 0.1s 0.1s ease-out;
+  transition: all 0.1s 0.1s ease-out; }
 
 .loaded #loader-wrapper {
   -webkit-transform: translateY(-100%);
