--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -1,3 +1,6 @@
+/* Loading effect css courtesy of https://ihatetomatoes.net/create-css3-spinning-preloader/, adapted into scss */
+
+//The wrapper to take up the whole viewport, so the width and height are set to 100%
 #loader-wrapper {
     position: fixed;
     top: 0;
@@ -6,6 +9,8 @@
     height: 100%;
     z-index: 1000;
     #loader {
+        //These declarations, including :before and :after, generate 3 circles that envelop each other. All but the top sides of the circles are then set to transparent so that when the spin animation is applied it gives the effect of lines going around in a circle
+        @extend %loading-spin-border;
         display: block;
         position: relative;
         left: 50%;
@@ -13,38 +18,30 @@
         width: 150px;
         height: 150px;
         margin: -75px 0 0 -75px;
- 
-        border: 3px solid transparent;
-        border-top-color: black;
-        border-radius: 50%;
         z-index: 1500;
         
         -webkit-animation: spin 2s linear infinite;
         animation: spin 2s linear infinite;
         &:before {
+            @extend %loading-spin-border;
             content: "";
             position: absolute;
             top: 5px;
             left: 5px;
             right: 5px;
             bottom: 5px;
-            border: 3px solid transparent;
-            border-top-color: black;
-            border-radius: 50%;
             
             -webkit-animation: spin 3s linear infinite;
             animation: spin 3s linear infinite;
         }
         &:after {
+            @extend %loading-spin-border;
             content: "";
             position: absolute;
             top: 15px;
             left: 15px;
             right: 15px;
             bottom: 15px;
-            border: 3px solid transparent;
-            border-top-color: black;
-            border-radius: 50%;
             
             -webkit-animation: spin 1.5s linear infinite;
             animation: spin 1.5s linear infinite;
