--- a/assets/stylesheets/helpers/placeholders.scss
+++ b/assets/stylesheets/helpers/placeholders.scss
@@ -1,4 +1,16 @@
+/* Structural */
 %force-center {
     margin: 15px auto;
     display: block;
+}
+
+/* Loading effect */
+%loading-spin-border {
+    border: {
+        width: 3px;
+        style: solid;
+        color: transparent;
+        top-color: black;
+        radius: 50%;
+    }
 }
