--- a/assets/stylesheets/helpers/variables.scss
+++ b/assets/stylesheets/helpers/variables.scss
@@ -4,3 +4,7 @@ $backgroundGreen: #2a9445;
 
 /* Structure */
 $min-width: 758px;
+
+/* Loading */
+$loaderBeforeDimension: 5px;
+$loaderAfterDimension: 15px;
