--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -44,6 +44,7 @@
 /* Imports */
 /* Colors */
 /* Structure */
+/* Loading */
 /*Media Queries */
 /* Structural */
 @import url("https://fonts.googleapis.com/css?family=Roboto");
