Targeted #loader-wrapper p with transitions

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -182,7 +182,7 @@ section {
 .loaded #loader-wrapper {
   visibility: hidden; }
 
-.loaded #loader {
+.loaded #loader, .loaded #loader-wrapper p {
   opacity: 0;
   -webkit-transition: all 0.1s ease-out;
   transition: all 0.1s ease-out; }
