--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -122,7 +122,7 @@
     visibility: hidden;
 }
 
-.loaded #loader {
+.loaded #loader, .loaded #loader-wrapper p {
     opacity: 0;
     -webkit-transition: all 0.1s ease-out; 
             transition: all 0.1s ease-out;
