--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -99,53 +99,51 @@
 }
 
 /* Loaded */
-.loaded #loader-wrapper .loader-section.section-left {
-    -webkit-transform: translateX(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
-    -ms-transform: translateX(-100%);  /* IE 9 */
-    transform: translateX(-100%);  /* Firefox 16+, IE 10+, Opera */
-}
- 
-.loaded #loader-wrapper .loader-section.section-right {
-    -webkit-transform: translateX(100%);  /* Chrome, Opera 15+, Safari 3.1+ */
-    -ms-transform: translateX(100%);  /* IE 9 */
-    transform: translateX(100%);  /* Firefox 16+, IE 10+, Opera */
-}
-
-.loaded #loader {
-    opacity: 0;
-}
-
-.loaded #loader-wrapper {
-    visibility: hidden;
-}
-
-.loaded #loader, .loaded #loader-wrapper p {
-    opacity: 0;
-    -webkit-transition: all 0.1s ease-out; 
-            transition: all 0.1s ease-out;
-}
-
-.loaded #loader-wrapper .loader-section.section-right,
-.loaded #loader-wrapper .loader-section.section-left {
- 
-    -webkit-transition: all 0.1s 0.1s ease-out; 
-            transition: all 0.1s 0.1s ease-out;
-}
-
-.loaded #loader-wrapper {
+.loaded {
+    #loader-wrapper {
+        visibility: hidden;
+        
         -webkit-transform: translateY(-100%);
             -ms-transform: translateY(-100%);
                 transform: translateY(-100%);
  
         -webkit-transition: all 0.1s 0.6s ease-out; 
                 transition: all 0.1s 0.6s ease-out;
+                
+        #loader, p {
+            opacity: 0;
+            -webkit-transition: all 0.1s ease-out; 
+            transition: all 0.1s ease-out;
+        }
+        .loader-section.section-left {
+            -webkit-transform: translateX(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: translateX(-100%);  /* IE 9 */
+            transform: translateX(-100%);  /* Firefox 16+, IE 10+, Opera */
+            
+            -webkit-transition: all 0.1s 0.1s ease-out; 
+            transition: all 0.1s 0.1s ease-out;
+        }
+        .loader-section.section-right {
+            -webkit-transform: translateX(100%);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: translateX(100%);  /* IE 9 */
+            transform: translateX(100%);  /* Firefox 16+, IE 10+, Opera */
+            
+            -webkit-transition: all 0.1s 0.1s ease-out; 
+            transition: all 0.1s 0.1s ease-out;
+        }
+    }
 }
 
 /* No JS fallback */
 
-.no-js #loader-wrapper {
+.no-js {
+    #loader-wrapper {
     display: none;
+    }
 }
-.no-js h1 {
+
+.no-js {
+    h1 {
     color: #222222;
+    }
 }
