--- a/assets/stylesheets/components/structure.scss
+++ b/assets/stylesheets/components/structure.scss
@@ -5,7 +5,7 @@
 // }
 
 body {
-    min-width: $min-width;
+    min-width: $minWidth;
     max-width: 1990px;
     @extend %force-center;
     margin-top: 0;
