--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -11,30 +11,24 @@
     #loader {
         //These declarations, including :before and :after, generate 3 circles that envelop each other. All but the top sides of the circles are then set to transparent so that when the spin animation is applied it gives the effect of lines going around in a circle
         @include loaderBorder(50%, 0, 0, 50%);
+        @include animation(spin, 2s);
         display: block;
         position: relative;
         width: 150px;
         height: 150px;
         margin: -75px 0 0 -75px;
         z-index: 1500;
-        
-        -webkit-animation: spin 2s linear infinite;
-        animation: spin 2s linear infinite;
         &:before {
             @include loaderBorder(5px, 5px, 5px, 5px);
+            @include animation(spin, 3s);
             content: "";
             position: absolute;
-            
-            -webkit-animation: spin 3s linear infinite;
-            animation: spin 3s linear infinite;
         }
         &:after {
             @include loaderBorder(15px, 15px, 15px, 15px);
+            @include animation(spin, 1.5ss);
             content: "";
             position: absolute;
-            
-            -webkit-animation: spin 1.5s linear infinite;
-            animation: spin 1.5s linear infinite;
         }
     }
     p {
