--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -48,6 +48,7 @@
 --------------------*/
 /* Loading 
 --------------------*/
+/* Animations */
 /* Structural
 --------------------*/
 @import url("https://fonts.googleapis.com/css?family=Roboto");
@@ -84,14 +85,14 @@ section {
     right: 0;
     bottom: 0;
     left: 50%;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
     display: block;
     position: relative;
     width: 150px;
     height: 150px;
     margin: -75px 0 0 -75px;
-    z-index: 1500;
-    -webkit-animation: spin 2s linear infinite;
-    animation: spin 2s linear infinite; }
+    z-index: 1500; }
     #loader-wrapper #loader:before {
       border-width: 3px;
       border-style: solid;
@@ -102,10 +103,10 @@ section {
       right: 5px;
       bottom: 5px;
       left: 5px;
-      content: "";
-      position: absolute;
       -webkit-animation: spin 3s linear infinite;
-      animation: spin 3s linear infinite; }
+      animation: spin 3s linear infinite;
+      content: "";
+      position: absolute; }
     #loader-wrapper #loader:after {
       border-width: 3px;
       border-style: solid;
@@ -116,10 +117,10 @@ section {
       right: 15px;
       bottom: 15px;
       left: 15px;
+      -webkit-animation: spin 1.5ss linear infinite;
+      animation: spin 1.5ss linear infinite;
       content: "";
-      position: absolute;
-      -webkit-animation: spin 1.5s linear infinite;
-      animation: spin 1.5s linear infinite; }
+      position: absolute; }
   #loader-wrapper p {
     color: white;
     z-index: 2000;
