--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -40,6 +40,7 @@
         text-align: center;
         font-size: 2rem;
     }
+    /*The loader sections are divided into left and right to give a curtain opening effect*/
     .loader-section {
         position: fixed;
         top: 0;
