--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -75,7 +75,8 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1000; }
+  z-index: 1000;
+  /*The loader sections are divided into left and right to give a curtain opening effect*/ }
   #loader-wrapper #loader {
     border-width: 3px;
     border-style: solid;
