--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -83,14 +83,15 @@ section {
     border-color: transparent;
     border-top-color: black;
     border-radius: 50%;
+    position: relative;
     top: 50%;
     right: 0;
     bottom: 0;
     left: 50%;
+    content: "";
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
     display: block;
-    position: relative;
     width: 150px;
     height: 150px;
     margin: -75px 0 0 -75px;
@@ -101,28 +102,28 @@ section {
       border-color: transparent;
       border-top-color: black;
       border-radius: 50%;
+      position: absolute;
       top: 5px;
       right: 5px;
       bottom: 5px;
       left: 5px;
-      -webkit-animation: spin 3s linear infinite;
-      animation: spin 3s linear infinite;
       content: "";
-      position: absolute; }
+      -webkit-animation: spin 3s linear infinite;
+      animation: spin 3s linear infinite; }
     #loader-wrapper #loader:after {
       border-width: 3px;
       border-style: solid;
       border-color: transparent;
       border-top-color: black;
       border-radius: 50%;
+      position: absolute;
       top: 15px;
       right: 15px;
       bottom: 15px;
       left: 15px;
-      -webkit-animation: spin 1.5s linear infinite;
-      animation: spin 1.5s linear infinite;
       content: "";
-      position: absolute; }
+      -webkit-animation: spin 1.5s linear infinite;
+      animation: spin 1.5s linear infinite; }
   #loader-wrapper p {
     color: white;
     z-index: 2000;
