--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -73,7 +73,7 @@
     @include button(#e84610, 200px)
 }
 
-@-webkit-keyframes spin {
+@include keyframes(spin) {
     0%   {
         -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
         -ms-transform: rotate(0deg);  /* IE 9 */
@@ -85,18 +85,32 @@
         transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
     }
 }
-@keyframes spin {
-    0%   {
-        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-        -ms-transform: rotate(0deg);  /* IE 9 */
-        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
-    }
-    100% {
-        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-        -ms-transform: rotate(360deg);  /* IE 9 */
-        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
-    }
-}
+// @include keyframes(spin);
+
+// @-webkit-keyframes spin {
+//     0%   {
+//         -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+//         -ms-transform: rotate(0deg);  /* IE 9 */
+//         transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
+//     }
+//     100% {
+//         -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+//         -ms-transform: rotate(360deg);  /* IE 9 */
+//         transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
+//     }
+// }
+// @keyframes spin {
+//     0%   {
+//         -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+//         -ms-transform: rotate(0deg);  /* IE 9 */
+//         transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
+//     }
+//     100% {
+//         -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+//         -ms-transform: rotate(360deg);  /* IE 9 */
+//         transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
+//     }
+// }
 
 /* Loaded */
 .loaded {
