--- a/assets/stylesheets/helpers/mixins.scss
+++ b/assets/stylesheets/helpers/mixins.scss
@@ -30,3 +30,66 @@
     animation: $animationName $animationDuration linear infinite;
 }
 
+
+@mixin keyframes($name) {
+    @-webkit-keyframes #{$name} {
+        @content
+    }
+    @keyframes #{$name} {
+        @content
+    }
+}
+
+
+// //CURRENTLY DOESN'T WORK
+// @mixin keyframes($name) {
+//     @-webkit-keyframes #{$name} {
+//         0% {
+//             @extend %rotate-keyframe-start;
+//         }
+//         100% {
+//             @extend %rotate-keyframe-finish;
+//         }
+//     }
+//     @keyframes #{$name} {
+//         0% {
+//             @extend %rotate-keyframe-start;
+//         }
+//         100% {
+//             @extend %rotate-keyframe-finish;
+//         }
+//     }
+// }
+
+
+
+
+
+
+//CURRENTLY DOESN'T WORK
+// @mixin keyframes($name, $deg) {
+    // @-webkit-keyframes $name {
+    //     0% {
+    //         -webkit-transform: rotate($deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+    //         -ms-transform: rotate($deg);  /* IE 9 */
+    //         transform: rotate($deg);  /* Firefox 16+, IE 10+, Opera */
+    //     }
+    //     100% {
+    //         -webkit-transform: rotate($deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+    //         -ms-transform: rotate($deg);  /* IE 9 */
+    //         transform: rotate($deg);  /* Firefox 16+, IE 10+, Opera */
+    //     }
+    // }
+    // @keyframes $name {
+    //     0%   {
+    //         -webkit-transform: rotate($deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+    //         -ms-transform: rotate($deg);  /* IE 9 */
+    //         transform: rotate($deg);  /* Firefox 16+, IE 10+, Opera */
+    //     }
+    //     100% {
+    //         -webkit-transform: rotate($deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+    //         -ms-transform: rotate($deg);  /* IE 9 */
+    //         transform: rotate($deg);  /* Firefox 16+, IE 10+, Opera */
+    //     }
+    // }
+// }
