--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -73,6 +73,7 @@
     @include button(#e84610, 200px)
 }
 
+/* The various vendor prefixes have been included in a mixin for conciseness */
 @include keyframes(spin) {
     0%   {
         @include transform(rotate(0deg));
@@ -82,7 +83,7 @@
     }
 }
 
-/* Loaded */
+/* These styles only take effect when .loaded has been applied to the body via jQuery */
 .loaded {
     #loader-wrapper {
         visibility: hidden;
