--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -86,11 +86,8 @@
 /* These styles only take effect when .loaded has been applied to the body via jQuery */
 .loaded {
     #loader-wrapper {
+        @include transform(translateY(-100%));
         visibility: hidden;
-        
-        -webkit-transform: translateY(-100%);
-            -ms-transform: translateY(-100%);
-                transform: translateY(-100%);
  
         -webkit-transition: all 0.1s 0.6s ease-out; 
                 transition: all 0.1s 0.6s ease-out;
@@ -101,17 +98,13 @@
             transition: all 0.1s ease-out;
         }
         .loader-section.section-left {
-            -webkit-transform: translateX(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
-            -ms-transform: translateX(-100%);  /* IE 9 */
-            transform: translateX(-100%);  /* Firefox 16+, IE 10+, Opera */
+            @include transform(translateX(-100%));
             
             -webkit-transition: all 0.1s 0.1s ease-out; 
             transition: all 0.1s 0.1s ease-out;
         }
         .loader-section.section-right {
-            -webkit-transform: translateX(100%);  /* Chrome, Opera 15+, Safari 3.1+ */
-            -ms-transform: translateX(100%);  /* IE 9 */
-            transform: translateX(100%);  /* Firefox 16+, IE 10+, Opera */
+            @include transform(translateX(100%));
             
             -webkit-transition: all 0.1s 0.1s ease-out; 
             transition: all 0.1s 0.1s ease-out;
