--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -86,28 +86,20 @@
 /* These styles only take effect when .loaded has been applied to the body via jQuery */
 .loaded {
     #loader-wrapper {
-        @include transform(translateY(-100%));
-        visibility: hidden;
+        opacity: 0;
  
-        -webkit-transition: all 0.1s 0.6s ease-out; 
-                transition: all 0.1s 0.6s ease-out;
+        -webkit-transition: all 0.5s 0s linear; 
+                transition: all 0.5s 0s linear;
                 
         #loader, p {
             opacity: 0;
-            -webkit-transition: all 0.1s ease-out; 
-            transition: all 0.1s ease-out;
+            
+        -webkit-transition: all 0.5s 0s linear; 
+                transition: all 0.5s 0s linear;
         }
         .loader-section.section-left {
-            @include transform(translateX(-100%));
-            
-            -webkit-transition: all 0.1s 0.1s ease-out; 
-            transition: all 0.1s 0.1s ease-out;
         }
         .loader-section.section-right {
-            @include transform(translateX(100%));
-            
-            -webkit-transition: all 0.1s 0.1s ease-out; 
-            transition: all 0.1s 0.1s ease-out;
         }
     }
 }
