--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -189,37 +189,13 @@ section {
     /* Firefox 16+, IE 10+, Opera */ } }
 /* These styles only take effect when .loaded has been applied to the body via jQuery */
 .loaded #loader-wrapper {
-  -webkit-transform: translateY(-100%);
-  /* Chrome, Opera 15+, Safari 3.1+ */
-  -ms-transform: translateY(-100%);
-  /* IE 9 */
-  transform: translateY(-100%);
-  /* Firefox 16+, IE 10+, Opera */
-  visibility: hidden;
-  -webkit-transition: all 0.1s 0.6s ease-out;
-  transition: all 0.1s 0.6s ease-out; }
+  opacity: 0;
+  -webkit-transition: all 0.5s 0s linear;
+  transition: all 0.5s 0s linear; }
   .loaded #loader-wrapper #loader, .loaded #loader-wrapper p {
     opacity: 0;
-    -webkit-transition: all 0.1s ease-out;
-    transition: all 0.1s ease-out; }
-  .loaded #loader-wrapper .loader-section.section-left {
-    -webkit-transform: translateX(-100%);
-    /* Chrome, Opera 15+, Safari 3.1+ */
-    -ms-transform: translateX(-100%);
-    /* IE 9 */
-    transform: translateX(-100%);
-    /* Firefox 16+, IE 10+, Opera */
-    -webkit-transition: all 0.1s 0.1s ease-out;
-    transition: all 0.1s 0.1s ease-out; }
-  .loaded #loader-wrapper .loader-section.section-right {
-    -webkit-transform: translateX(100%);
-    /* Chrome, Opera 15+, Safari 3.1+ */
-    -ms-transform: translateX(100%);
-    /* IE 9 */
-    transform: translateX(100%);
-    /* Firefox 16+, IE 10+, Opera */
-    -webkit-transition: all 0.1s 0.1s ease-out;
-    transition: all 0.1s 0.1s ease-out; }
+    -webkit-transition: all 0.5s 0s linear;
+    transition: all 0.5s 0s linear; }
 
 /* No JS fallback */
 .no-js #loader-wrapper {
