--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -86,17 +86,8 @@
 /* These styles only take effect when .loaded has been applied to the body via jQuery */
 .loaded {
     #loader-wrapper {
+        @include transition(all, 0.5s, linear);
         opacity: 0;
- 
-        -webkit-transition: all 0.5s 0s linear; 
-                transition: all 0.5s 0s linear;
-                
-        #loader, p {
-            opacity: 0;
-            
-        -webkit-transition: all 0.5s 0s linear; 
-                transition: all 0.5s 0s linear;
-        }
     }
 }
 
