--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -50,6 +50,7 @@
 /* Loading 
 --------------------*/
 /* Animations */
+/* Only the necessary shorthand properties are added, if desired it won't take long to add delay in to this mixin as well */
 /* Structural
 --------------------*/
 @import url("https://fonts.googleapis.com/css?family=Roboto");
@@ -189,13 +190,9 @@ section {
     /* Firefox 16+, IE 10+, Opera */ } }
 /* These styles only take effect when .loaded has been applied to the body via jQuery */
 .loaded #loader-wrapper {
-  opacity: 0;
-  -webkit-transition: all 0.5s 0s linear;
-  transition: all 0.5s 0s linear; }
-  .loaded #loader-wrapper #loader, .loaded #loader-wrapper p {
-    opacity: 0;
-    -webkit-transition: all 0.5s 0s linear;
-    transition: all 0.5s 0s linear; }
+  -webkit-transition: all 0.5s linear;
+  transition: all 0.5s linear;
+  opacity: 0; }
 
 /* No JS fallback */
 .no-js #loader-wrapper {
