--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -58,6 +58,7 @@
 /* These styles only take effect when .loaded has been applied to the body via jQuery */
 .loaded {
     #loader-wrapper {
+        /* Fade the loading wrapper out */
         @include transition(all, 0.5s, linear);
         opacity: 0;
     }
