--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -61,6 +61,7 @@
         /* Fade the loading wrapper out */
         @include transition(all, 0.5s, linear);
         opacity: 0;
+        visibility: hidden;
     }
 }
 
