--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -176,7 +176,8 @@ section {
   /* Fade the loading wrapper out */
   -webkit-transition: all 0.5s linear;
   transition: all 0.5s linear;
-  opacity: 0; }
+  opacity: 0;
+  visibility: hidden; }
 
 /* No JS fallback */
 .no-js #loader-wrapper {
