--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -66,9 +66,34 @@
 }
 
 /* No JS fallback */
+#no-js-display {
+    display: none;
+}
 
 .no-js {
-    #loader-wrapper {
+    #no-js-display {
+    width: 100%;
+    height: 100%;
+    background: #9bcd64;
+    color: white;
+    position: fixed;
+    display: block;
+        div {
+            position: relative;
+            top: 50%;
+            text-align: center;
+            p {
+                font-size: 2rem;
+                span {
+                    font-size: 3rem;
+                }
+            }
+            i {
+                font-size: 3rem;
+            }
+        }
+    }
+    #loader-wrapper, nav, main, footer {
     display: none;
     }
 }
