--- a/assets/stylesheets/components/no-js.scss
+++ b/assets/stylesheets/components/no-js.scss
@@ -7,7 +7,7 @@
     #no-js-display {
     width: 100%;
     height: 100%;
-    background: #9bcd64;
+    background: $loaderGreen;
     color: white;
     position: fixed;
     display: block;
