--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -40,7 +40,7 @@
         top: 0;
         width: 100%;
         height: 100%;
-        background: #9bcd64;
+        background: $loaderGreen;
         z-index: $baseLoadZIndex - 1;
     }
 }
