Added variable  and replaced all scss where appropriate

--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -27,7 +27,7 @@
         }
     }
     p {
-        color: white;
+        color: $pureWhite;
         z-index: $baseLoadZIndex + 1000;
         display: block;
         position: relative;
