--- a/assets/stylesheets/components/charts.scss
+++ b/assets/stylesheets/components/charts.scss
@@ -10,7 +10,7 @@
     svg {
         .pie-slice-group {
             /*add a stroke to the pie slices*/
-            stroke: black;
+            stroke: $pureBlack;
             stroke-width: 1px;
         }
     }
