--- a/assets/stylesheets/helpers/placeholders.scss
+++ b/assets/stylesheets/helpers/placeholders.scss
@@ -12,7 +12,7 @@
         width: 3px;
         style: solid;
         color: transparent;
-        top-color: black;
+        top-color: $pureBlack;
         radius: 50%;
     }
 }
