--- a/assets/stylesheets/components/structure.scss
+++ b/assets/stylesheets/components/structure.scss
@@ -15,6 +15,8 @@ section {
     margin-top: 20px;
 }
 
+//%force-center is extended here, rather than on individual classes, so that the .force-center class can be added to elements via javascript
 .force-center {
     @extend %force-center;
 }
+
