Added instructional text to source select box, styled

--- a/assets/stylesheets/components/charts.scss
+++ b/assets/stylesheets/components/charts.scss
@@ -1,3 +1,10 @@
+#source-selector-container {
+    width: 100%;
+    p {
+        text-align: center;
+        margin-bottom: -15px;
+    }
+}
 #total-emissions-over-time {
     .line {
         /*make stroke thicker than default*/
