--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -226,9 +226,9 @@ h1 {
       .navbar h2 {
         font-size: 2rem; } }
 
-#source-selector-container {
+.selector-container {
   width: 100%; }
-  #source-selector-container p {
+  .selector-container p {
     text-align: center;
     margin-bottom: -15px; }
 
