--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -183,6 +183,7 @@
 @import "components/no-js.scss";
 @import "components/loader.scss";
 @import "components/navbar.scss";
+@import "components/footer.scss";
 @import "components/charts.scss";
 @import "components/text.scss";
 @import "components/images.scss";
